<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="278dp"
        android:layout_height="546dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/participant_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/id"
            android:inputType="textLongMessage"
            android:singleLine="false"
            android:text="64:CF:D9:29:A6:39"
            android:textSize="12sp" />

        <Button
            android:id="@+id/start_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start" />

        <Button
            android:id="@+id/stop_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stop"
            android:visibility="invisible" />

        <Button
            android:id="@+id/upload_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload"
            android:visibility="invisible" />
        <Button
            android:id="@+id/connect_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            />
        <Button
            android:id="@+id/unlock_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unlock"
            />
        <Button
            android:id="@+id/lock_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lock"
            />

        <Button
            android:id="@+id/disconnect_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disconnect"
            />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Connect on App start"
            android:onClick="onCheckboxClicked"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="32dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>